tests/snapshots/cli__show_card_is_deeply_nested.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - show
    - /tmp/.tmpXWCaHO
  envs: {}
  page_lines:
    - - "- Not card"
      - "- induction"
      - "  - Automatically generated induction principles for Inductive Types (in general)"
      - "    - What kind of function is a generated induction principle function (similarity, not implimentation)? #card"
      - "      card-last-score:: 5"
      - "      card-repeats:: 6"
      - "      card-next-schedule:: 2026-01-25T00:00:00.000Z"
      - "      card-last-interval:: 244.14"
      - "      card-ease-factor:: 3.5"
      - "      card-last-reviewed:: 2025-05-26T09:11:31.735Z"
      - "      - Fixpoint"
      - "- Not card"
      - ""
---
success: true
exit_code: 0
----- stdout -----
- What kind of function is a generated induction principle function (similarity, not implimentation)? #card
  - Fixpoint

----- stderr -----
