tests/snapshots/cli__show_format_storage.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - show
    - /tmp/.tmpx3LzA9
  envs:
    LOSRS__OUTPUT__FORMAT: Storage
  page_lines:
    - - "- Not card"
      - "- What is the antiderivative of $f(x) = x^r$ (symbolic)? #card"
      - "  card-last-interval:: 244.14"
      - "  card-repeats:: 6"
      - "  card-ease-factor:: 3.1"
      - "  card-next-schedule:: 2025-12-28T00:00:00.000Z"
      - "  card-last-reviewed:: 2025-04-28T09:12:30.985Z"
      - "  card-last-score:: 5"
      - "  - $$\\int{x^r dx} = \\frac{x^{(r+1)}}{r+1} + C$$"
      - "- Not card"
      - ""
---
success: true
exit_code: 0
----- stdout -----
- What is the antiderivative of $f(x) = x^r$ (symbolic)? #card
  card-last-interval:: 244.14
  card-repeats:: 6
  card-ease-factor:: 3.1
  card-next-schedule:: 2025-12-28T00:00:00.000Z
  card-last-reviewed:: 2025-04-28T09:12:30.985Z
  card-last-score:: 5
  card-fsrs-metadata:: {"due":"2025-12-28T00:00:00Z","stability":244.14,"difficulty":5.0,"elapsed_days":244,"scheduled_days":244,"reps":6,"lapses":0,"state":"Review","last_review":"2025-04-28T09:12:30.985Z"}
  - $$\int{x^r dx} = \frac{x^{(r+1)}}{r+1} + C$$

----- stderr -----
