tests/snapshots/cli__show_format_storage_card_with_fsrs_metadata.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - show
    - /tmp/.tmprmg9aG
  envs:
    LOSRS__OUTPUT__FORMAT: Storage
  page_lines:
    - - "- Not card"
      - "- What is a sphere? #card"
      - "  card-last-interval:: 9.0"
      - "  card-repeats:: 7"
      - "  card-ease-factor:: 3.1"
      - "  card-next-schedule:: 2025-12-01T15:04:05.123456789Z"
      - "  card-last-reviewed:: 2025-11-22T15:04:05.123456789Z"
      - "  card-last-score:: 5"
      - "  card-fsrs-metadata:: {\"due\":\"2025-12-01T15:04:05.123456789Z\",\"stability\":8.774341658142419,\"difficulty\":7.040172161986166,\"elapsed_days\":245,\"scheduled_days\":9,\"reps\":7,\"lapses\":1,\"state\":\"Review\",\"last_review\":\"2025-11-22T15:04:05.123456789Z\"}"
      - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
      - "- Not card"
      - ""
---
success: true
exit_code: 0
----- stdout -----
- What is a sphere? #card
  card-last-interval:: 9
  card-repeats:: 7
  card-ease-factor:: 2.5
  card-next-schedule:: 2025-12-01T15:04:05.123Z
  card-last-reviewed:: 2025-11-22T15:04:05.123Z
  card-last-score:: 5
  card-fsrs-metadata:: {"due":"2025-12-01T15:04:05.123Z","stability":8.774,"difficulty":7.04,"elapsed_days":245,"scheduled_days":9,"reps":7,"lapses":1,"state":"Review","last_review":"2025-11-22T15:04:05.123Z"}
  - Set of points in a 3 dimensional space that are equidistant from a center point.

----- stderr -----
