tests/snapshots/cli__show_help.snap
---
source: tests/cli.rs
info:
  program: logseq-srs
  args:
    - show
    - /tmp/.tmpzv5z2K
    - "--help"
  page_lines:
    - - ""
---
success: true
exit_code: 0
----- stdout -----
print cards

Usage: logseq-srs show [OPTIONS] <PATH> [PROMPT_FINGERPRINT]

Arguments:
  <PATH>                The path to the file to read
  [PROMPT_FINGERPRINT]  Fingerprint of the card's prompt. Use metadata command to find one

Options:
      --format <FORMAT>  [default: clean] [possible values: clean, typst, sixel, storage, kitty, i-term]
  -v, --verbose...       Increase logging verbosity
  -q, --quiet...         Decrease logging verbosity
  -h, --help             Print help

----- stderr -----
